# bourne-sdks

./: .gitignore  README.md
.github/workflows/: publish-custom-hooks-sdk-pypi.yml
custom-hooks-sdk/: .eslintrc.json  .npmrc  LICENSE  README.md  jest.config.js  package.json  tsconfig.json
custom-hooks-sdk-py/: LICENSE  README.md  pyproject.toml
custom-hooks-sdk-py/examples/: send_test_event.py
custom-hooks-sdk-py/src/permiso_custom_hooks/: __init__.py  client.py  events.py  exceptions.py
custom-hooks-sdk-py/tests/: __init__.py  test_client.py
custom-hooks-sdk/examples/: send-test-event.cjs
custom-hooks-sdk/lib/: client.d.ts  client.js  events.d.ts  events.js  index.d.ts  index.js  types.d.ts
custom-hooks-sdk/src/: client.ts  events.ts  index.ts  types.ts
custom-hooks-sdk/src/__tests__/: client.test.ts
test-sdk-py/: DEVELOPER_ONBOARDING.md  IMPLEMENTATION_FRICTION.md  pyproject.toml
test-sdk-py/examples/: live_smoke.py
test-sdk-py/scripts/: create_venv.sh
test-sdk-py/test_sdk_py/: __init__.py  mach5.py  onepassword.py
test-sdk-py/test_sdk_py/agents/: __init__.py  batch_worker.py  react_agent.py  session_user.py  subagent.py
test-sdk-py/test_sdk_py/mach5_mappings/: agent_run_events_v2.json  agent_runs_v2.json
test-sdk-py/tests/: conftest.py  test_e2e_mach5.py  test_import_and_version.py  test_usability_batch.py  test_usability_react_agent.py  test_usability_session_user.py  test_usability_subagent.py
